# RetUNet

./: README.md  pyproject.toml
retunet/: configuration.py  paths.py
retunet/batch_running/: collect_results_custom_Decathlon.py  collect_results_custom_Decathlon_2d.py
retunet/batch_running/benchmarking/: summarize_benchmark_results.py
retunet/batch_running/release_trainings/nnunetv2_v1/: collect_results.py
retunet/dynamic_network_architectures/architectures/: unet.py
retunet/dynamic_network_architectures/attentions/: RetSA.py  ViT.py  window_attention.py
retunet/dynamic_network_architectures/building_blocks/: plain_conv_encoder.py  residual_encoders.py  unet_decoder.py  unet_residual_decoder.py
retunet/ensembling/: ensemble.py
retunet/evaluation/: accumulate_cv_results.py  evaluate_predictions.py  find_best_configuration.py
retunet/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
retunet/experiment_planning/dataset_fingerprint/: fingerprint_extractor.py
retunet/experiment_planning/experiment_planners/: default_experiment_planner.py  resencUNet_planner.py
retunet/experiment_planning/plans_for_pretraining/: move_plans_between_datasets.py
retunet/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
retunet/inference/: data_iterators.py  examples.py  export_prediction.py  predict_from_raw_data.py  readme.md
retunet/model_sharing/: entry_points.py  model_download.py  model_export.py  model_import.py
retunet/postprocessing/: remove_connected_components.py
retunet/preprocessing/normalization/: map_channel_name_to_normalization.py
retunet/preprocessing/preprocessors/: default_preprocessor.py
retunet/preprocessing/resampling/: default_resampling.py  utils.py
retunet/run/: run_training.py
retunet/tests/integration_tests/: add_lowres_and_cascade.py  cleanup_integration_test.py  run_integration_test_bestconfig_inference.py
retunet/training/dataloading/: base_data_loader.py  data_loader_2d.py  data_loader_3d.py  nnunet_dataset.py  utils.py
retunet/training/loss/: compound_losses.py  dice.py
retunet/training/nnUNetTrainer/: nnUNetTrainer.py
retunet/training/nnUNetTrainer/variants/benchmarking/: nnUNetTrainerBenchmark_5epochs.py  nnUNetTrainerBenchmark_5epochs_noDataLoading.py
retunet/training/nnUNetTrainer/variants/data_augmentation/: nnUNetTrainerDA5.py  nnUNetTrainerDAOrd0.py  nnUNetTrainerNoDA.py  nnUNetTrainerNoMirroring.py
retunet/training/nnUNetTrainer/variants/loss/: nnUNetTrainerCELoss.py  nnUNetTrainerDiceLoss.py  nnUNetTrainerTopkLoss.py
retunet/training/nnUNetTrainer/variants/lr_schedule/: nnUNetTrainerCosAnneal.py
retunet/training/nnUNetTrainer/variants/network_architecture/: nnUNetTrainerBN.py  nnUNetTrainerNoDeepSupervision.py
retunet/training/nnUNetTrainer/variants/optimizer/: nnUNetTrainerAdam.py  nnUNetTrainerAdan.py
retunet/training/nnUNetTrainer/variants/sampling/: nnUNetTrainer_probabilisticOversampling.py
retunet/training/nnUNetTrainer/variants/training_length/: nnUNetTrainer_Xepochs.py  nnUNetTrainer_Xepochs_NoMirroring.py
retunet/utilities/: dataset_name_id_conversion.py  file_path_utilities.py  get_network_from_plans.py  overlay_plots.py  utils.py
retunet/utilities/label_handling/: label_handling.py
retunet/utilities/plans_handling/: plans_handler.py
